# llmtest

./: .gitignore  audio_io.py  gemini.md  list_devices.py  llm.py  main.py  pyproject.toml  stt.py  tts.py  tts_interface.py  tts_melo.py  tts_sbv2.py
src/: main.py
src/common/: config.py
src/core/: conversation.py  voice_assistant.py
src/llm/: llm.py
src/mcp/: mcp_client.py  mcp_config.json
src/stt/: stt.py
src/tts/: tts_sbv2.py
tests/: test_voice_assistant.py
