[project]
name = "voice-assistant"
version = "0.1.0"
description = "Local Voice Assistant with MCP Support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy",
    "scipy",
    "sounddevice",
    "faster-whisper",
    "llama-cpp-python==0.3.16",
    "mcp",
    "torch",
    "torchaudio"
]

[tool.uv]
package = true
